# dcompframe

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/agents/: dcompframe.agent.md  wininjector.agent.md
.github/workflows/: ci.yml
demo/: demo-config.json  main.cpp
docs/: api.md  code-quality.md  coding-standard.md  compatibility-matrix.md  dcompframe-analysis.md  dcompframe-modules.md  dcompframe-tests.md  design.md  dev-progress.md  development-tasks.md  dwm-compatibility.md  examples.md  feature-requirements.md  flex-layout-engine-design.md  flexbox-only-spec.md  framework-design.md  future-todo.md  implementation-principles.md  product-todo.md  tech-stack.md
docs/ui-requirements/: README.md  ui-controls-design-spec.md  ui-framework-design-spec.md
include/dcompframe/: application.h  errors.h  geometry.h  render_manager.h  ui_element.h  window_host.h
include/dcompframe/animation/: animation_manager.h
include/dcompframe/binding/: observable.h
include/dcompframe/config/: app_config.h
include/dcompframe/controls/: badge.h  button.h  card.h  check_box.h  combo_box.h  controls.h  controls_common.h  divider.h  expander.h  image.h  items_control.h  label.h  list_view.h  loading.h  log_box.h  panel.h  popup.h  progress.h  radio_group.h  rich_text_box.h  scroll_viewer.h  slider.h  style.h  styled_element.h  tab_control.h  text_block.h  text_box.h  toggle_switch.h
include/dcompframe/events/: input_event.h
include/dcompframe/input/: input_manager.h
include/dcompframe/layout/: flex_panel.h  grid_panel.h  stack_panel.h
include/dcompframe/tools/: window_render_target.h
src/: application.cpp  render_manager.cpp  ui_element.cpp  window_host.cpp
src/animation/: animation_manager.cpp
src/binding/: observable.cpp
src/config/: app_config.cpp
src/controls/: card.cpp  controls.cpp  style.cpp
src/input/: input_manager.cpp
src/layout/: flex_panel.cpp  grid_panel.cpp  stack_panel.cpp
src/tools/: window_render_target.cpp
tests/: controls_and_animation_tests.cpp  integration_flow_tests.cpp  product_features_tests.cpp  reliability_tests.cpp  render_and_window_tests.cpp  tools_and_layout_manager_tests.cpp  ui_and_layout_tests.cpp
